# SACP-Ecosystem-Hub

./: .gitignore  README.md  pyproject.toml
config/: workspace.registry.json
scripts/: demo_bioelectric_flow.py  sync_workspace_registry.py
src/sacp_hub/: __init__.py  api.py  artifact_registry.py  config.py  models.py  service.py  suite_bridge_contract.py
src/sacp_hub/adapters/: __init__.py  auic_adapter.py  base.py  maxwell_adapter.py  osm_validator.py  sacp_api.py
src/sacp_hub/store/: __init__.py  hashing.py  runstore.py  schemas.py
src/sacp_hub/workspace/: __init__.py  sync.py
tests/: conftest.py
tests/contract/: test_hub_artifact_contracts.py  test_osm_conformance.py  test_sacp_adapter_mapping.py  test_suite_bridge_contract.py
tests/e2e/: test_corrupt_artifact_failure.py  test_followup_missing.py  test_maxwell_import_flow.py  test_report_view.py  test_retry_transient.py  test_suite_bridge_flow.py  test_workflow_happy_path.py
tests/unit/: test_adapter_classification.py  test_adapter_normalization.py  test_intent_and_schema.py  test_maxwell_adapter.py  test_workflow_idempotency.py
