[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sacp-ecosystem-hub"
version = "0.1.0"
description = "Thin orchestration hub for SACP ecosystem workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pydantic>=2.8",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "httpx>=0.27",
]

[project.scripts]
sacp-hub-api = "sacp_hub.api:run"
sacp-hub-sync-workspace = "sacp_hub.workspace.sync:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
